--- a/packages/bolt-core/02-tools/tools-spacing/_tools.collapse-directionals.scss
+++ b/packages/bolt-core/02-tools/tools-spacing/_tools.collapse-directionals.scss
@@ -24,7 +24,7 @@
 ///
 /// @return {List}
 
-@function collapse-directionals($vals) {
+@function _bolt-collapse-directional-values($vals) {
   $output: null;
 
   $a: nth($vals, 1);
