WIP - boltdesignsystem.com cleanup

--- a/packages/ui-toolkit/04-elements/elements-page/index.scss
+++ b/packages/ui-toolkit/04-elements/elements-page/index.scss
@@ -24,7 +24,7 @@ body {
   width: 100%;
   @include font-family(body);
   @include font-size(base);
-
+  background-color: hsla(0, 0, 50%, 0.05);
   // margin: 0;
   // padding: 0;
 }
