--- a/packages/ui-toolkit/05-objects/objects-wrapper/index.scss
+++ b/packages/ui-toolkit/05-objects/objects-wrapper/index.scss
@@ -1,4 +1,4 @@
-$wrapper--max-width: map-get($breakpoints, xlarge) !default;
+$wrapper--max-width: map-get($breakpoints, large) !default;
 
 .o-wrapper {
   @include padding-left(small);
