--- a/packages/ui-toolkit/bolt/bolt.scss
+++ b/packages/ui-toolkit/bolt/bolt.scss
@@ -16,7 +16,7 @@
 @import '@bolt/generic-all';
 // @import 'normalize-scss/sass/normalize';
 // @include normalize();
-// @import '03-generic/generic.all';
+@import '../03-generic/generic.reset';
 
 
 /* ------------------------------------ *\
@@ -35,6 +35,7 @@
   Components
 \* ------------------------------------ */
 @import '@bolt/components-all';
+@import '../06-components/components.headings.refactor';
 
 
 /* ------------------------------------ *\
