--- a/packages/ui-toolkit/02-tools/tools-all/index.scss
+++ b/packages/ui-toolkit/02-tools/tools-all/index.scss
@@ -10,3 +10,22 @@
 @import '@bolt/tools-font-kerning';
 @import '@bolt/tools-spacing';
 @import '@bolt/tools-color-palette';
+
+@mixin uppercase() {
+  text-transform: uppercase;
+  letter-spacing: .1rem;
+  // overflow-wrap: break-word;
+  // word-wrap: break-word;
+  // -ms-word-break: break-all;
+  //
+  // // This is the dangerous one in WebKit, as it breaks things wherever
+  // word-break: break-all;
+  // // Instead use this non-standard one
+  // word-break: break-word;
+  //
+  // /* Adds a hyphen where the word breaks, if supported (No Blink) */
+  // -ms-hyphens: auto;
+  // -moz-hyphens: auto;
+  // -webkit-hyphens: auto;
+  // hyphens: auto;
+}
