--- a/packages/ui-toolkit/04-elements/elements-page/index.scss
+++ b/packages/ui-toolkit/04-elements/elements-page/index.scss
@@ -24,7 +24,10 @@ body {
   width: 100%;
   @include font-family(body);
   @include font-size(base);
-  background-color: hsla(0, 0, 50%, 0.05);
+  // background-image: linear-gradient(to bottom,#0ff 0,rgba(255,255,255,0)1px);
+  // background-repeat: repeat-y;
+  // background-size: 100% 1rem;
+  margin: 0;
   // margin: 0;
   // padding: 0;
 }
