--- a/packages/ui-toolkit/05-objects/objects-all/index.scss
+++ b/packages/ui-toolkit/05-objects/objects-all/index.scss
@@ -2,3 +2,4 @@
 @import '@bolt/objects-wrapper';
 @import '@bolt/objects-island';
 @import '@bolt/objects-inline-list';
+@import '@bolt/objects-ui-list';
