--- a/packages/ui-toolkit/05-objects/objects-wrapper/index.scss
+++ b/packages/ui-toolkit/05-objects/objects-wrapper/index.scss
@@ -1,4 +1,5 @@
-$wrapper--max-width: map-get($breakpoints, large) !default;
+// $wrapper--max-width: map-get($breakpoints, large) !default;
+$wrapper--max-width: 1400px !default;
 
 .o-wrapper {
   @include padding-left(small);
@@ -6,4 +7,9 @@ $wrapper--max-width: map-get($breakpoints, large) !default;
   @include margin-left(auto);
   @include margin-right(auto);
   max-width: $wrapper--max-width;
+
+  @include respond-to(medium){
+    @include padding-left(large);
+    @include padding-right(large);
+  }
 }
