WIP: adding missing files

--- a/packages/ui-toolkit/06-components/_components.headings.refactor.scss
+++ b/packages/ui-toolkit/06-components/_components.headings.refactor.scss
@@ -104,6 +104,8 @@
 .c-page-intro__link {
   @include font-size(large);
   @include font-weight(bold);
+  @include margin-bottom(small);
+  display: inline-block;
 }
 
 
