fix: folder cleanup

--- a/packages/ui-toolkit/01-settings/settings-colors/index.scss
+++ b/packages/ui-toolkit/01-settings/settings-colors/index.scss
@@ -61,10 +61,10 @@ $palettes: (
     xxdark: hsl(225, 8%, 9%)     //#16171A
   ),
   black: (
-    base:   #000
+    base:   #16171A
   ),
   white: (
-    base:   #fff
+    base:   #ffffff
   ),
   inherit: (
     base:   inherit
